Changes to jenkins file